[project]
name = "svy-ecosystem"
version = "0.0.0"
description = "Python ecosystem for complex survey design, analysis, and reporting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Samplics LLC", email = "msdiallo@samplics.org" }
]

# This project is NOT meant to be installed as a package
# It only exists to manage the workspace
dependencies = []

[tool.uv]
# Declare workspace members
workspace = [
  "packages/svy",
  "packages/svy-sae",
  "packages/svy-io",
]

# Optional: central dependency overrides / pins
# Useful when multiple packages depend on the same core libs
[tool.uv.dependency-overrides]
# polars = ">=1.36,<2.0"
# pyarrow = ">=22,<23"

[tool.uv.sources]
svy = { workspace = true }
svy-sae = { workspace = true }
svy-io = { workspace = true }
svy-agents = { workspace = true }

# ---------------------------
# Tooling (shared defaults)
# ---------------------------

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["packages"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
strict_optional = true
ignore_missing_imports = true

# ---------------------------
# Build / automation helpers
# ---------------------------

[tool.setuptools]
# Prevent accidental packaging
packages = []
